# turbo

./: .gitattributes  .gitignore  Cargo.toml  PKGBUILD  PKGBUILD.testing  README.md  setup_turbo.sh  turbo-fm  turbo-git.install
.cargo/: config.toml
src/: aur.rs  build.rs  config.rs  main.rs  pac.rs  self_update.rs  style.rs  ui.rs
