[package]
name = "aurwrap"
version = "0.1.16"
edition = "2021"
description = "A Rust AUR helper that wraps pacman, clones and builds AUR packages in a temp tree, and installs in a single pacman -U step"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"
tempfile = "3.10"
which = "6.0"
duct = "0.13"
indicatif = "0.17"
petgraph = "0.6"
rayon = "1.10"
home = "0.5"
toml = "0.8"
globwalk = "0.9"
urlencoding = "2.1"
semver = "1.0"
tokio = { version = "1.37", features = ["full"] }

[profile.release]
codegen-units = 1
lto = false
opt-level = 3
strip = true
